# grvpn

./: README.md  docker-compose.yaml
.github/workflows/: build.yaml
cli/: pyproject.toml
cli/cli/: main.py  openvpn.py
grvpn/scripts/: release.sh
server/: .goreleaser.yaml  go.mod  go.sum  main.go
server/api/: api.go  auth.go  client.go  ping.go  test.go  user.go
server/config/: banner.go  config.go
server/database/: db.go
server/jobs/: expire.go
server/model/: auth.go  client.go
server/scripts/: openvpn-helper.sh  release.sh  run.sh
server/service/: auth.go  client.go  sentinel.go  vpn.go
server/utils/: config.go  logger.go
web/: index.html  netlify.toml  package-lock.json  package.json
web/src/: App.tsx
web/src/components/: Header.tsx  NoExpiredProfilesCard.tsx  NoProfilesCard.tsx  ProfileCard.tsx
web/src/consts/: config.tsx
web/src/models/: client.tsx
