[project]
name = "cli"
version = "0.1.0"
description = ""
authors = [
    {name = "Bharat Kathi",email = "bharat1031@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "typing-extensions (>=4.14.1,<5.0.0)"
]


[project.scripts]
grvpn = "cli.main:cli"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
